tests/fsharp/typecheck/sigs/neg85.bsl

neg85.fsx(7,9,7,38): typecheck error FS3162: A type variable has been constrained by multiple different class types. A type variable may only have one class constraint.
